--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 <p>30 - El crecimiento de la desigualdad y la pobreza, la tendencia general de los sistemas económicos al despotismo o el colapso y la tendencia a destruir el medio ambiente surgen de propiedades de las dinámicas de liderazgo. Existen mecanismos sencillos que podemos implementar en una red productiva para salvar al mundo.</p>
 
 <p>Redactado por Juan Zaragoza.</p>
+<p>Más información en <a href="https://filosofiadelfuturo.com/">Filosofía del futuro.</a></p>
 <h3>Firmantes:</h3>
 
 <p><b><a href="https://www.instagram.com/juanozaragoza/">Juan Zaragoza</a></b><br>
