--- a/en/index.html
+++ b/en/index.html
@@ -96,7 +96,7 @@ Activismo y topología de redes.</p>
         <p><b><a href="https://www.instagram.com/lucschiav/">Luciano B. Schiavone</a></b><br>
 Física y filosofía.</p>
 
-        <p><b><a href="https://www.instagram.com/giovigeraldina/">Santiago Cisternas</a></b><br>
+        <p><b><a href="">Santiago Cisternas</a></b><br>
 Antropología e informática.</p>
         <br>
 <iframe src="https://embeds.beehiiv.com/2d0e2dc5-d90a-40e0-aa29-7acec4c131d3" data-test-id="beehiiv-embed" width="100%" height="320" frameborder="0" scrolling="no" style="border-radius: 4px; border: 2px solid #e5e7eb; margin: 0; background-color: transparent;"></iframe>
