--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="favicon_filofut.png">
+
   <style>
     body {
       font-family: system-ui, -apple-system, sans-serif;
