--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" href="favicon_filofut.png">
   <style>
     body {
       font-family: system-ui, -apple-system, sans-serif;
@@ -59,7 +60,7 @@
       border-radius: 8px;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
       position: relative;
-      transition: all 0.6s ease;
+      transition: all 0.9s ease;
       margin: 0 -20px;
       cursor: pointer;
     }
@@ -108,7 +109,7 @@
       margin-top: 0;
       padding-top: 0;
       overflow: hidden;
-      transition: all 0.5s ease;
+      transition: all 0.8s ease;
     }
 
     .timeline-content:hover .additional-info {
