--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
     }
 
     h1 {
-      text-align: center;
-      color: #2d3748;
-      margin-bottom: 2rem;
-      font-size: 2rem;
+        text-align: center;
+        color: #1e40af; /* Darker, richer blue */
+        font-size: 2.5rem; /* Larger size */
+        font-weight: 800; /* Bolder */
+        letter-spacing: -0.025em; /* Tighter letter spacing */
     }
 
     .timeline {
@@ -37,7 +38,7 @@
       transform: translateX(-50%);
       width: 4px;
       height: 100%;
-      background: #3b82f6;
+      background: #0c316d;
       border-radius: 2px;
     }
 
@@ -71,7 +72,7 @@
     }
 
     .date {
-      color: #3b82f6;
+      color: #1e40af;
       font-weight: bold;
       margin-bottom: 0.5rem;
       font-size: 1.2rem;
@@ -94,7 +95,7 @@
     .dot {
       width: 20px;
       height: 20px;
-      background: #3b82f6;
+      background: #1e40af;
       border-radius: 50%;
       position: absolute;
       left: 50%;
